@@ -2,6 +2,8 @@
 changes in sbcl-0.9.9 relative to sbcl-0.9.8:
   * new platform: experimental support for the Windows operating
     system has been added.  (thanks to Alastair Bridgewater)
+  * fixed several bugs in and robustified the PPC FFI (including
+    callbacks).  (thanks to Cyrus Harmon and Heiner Schwarte)
   * optimization: faster implementation of EQUAL
   * fixed segfaults on x86 FreeBSD 7-current (thanks to NIIMI Satoshi)
 
